[project]
name = "dqn-pong"
version = "0.1.0"
description = "Deep Q-Network for Pong game using PyTorch and Gymnasium"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.28.0",
    "ale-py>=0.9.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

